Fix- z-index do header corrigido

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -42,6 +42,7 @@
 
 @media only screen and (min-width: 1200px) { 
 .header {
+  z-index: 1;
   top: 0;
   background-color: #1c1c1c;
   position: fixed;
