--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -3,6 +3,7 @@
     display: flex;
     height: 95px;
     align-items: center;
+    padding-left: 25px;
   }
   
   .logo {
