--- a/src/components/MyImage/MyImage.css
+++ b/src/components/MyImage/MyImage.css
@@ -132,6 +132,7 @@
 
 @media only screen and (min-width: 1200px) { 
 .container-picture {
+  position: relative;
   display: flex;
   width: 400px;
   align-items: center;
