--- a/src/components/Presentation/Presentation.css
+++ b/src/components/Presentation/Presentation.css
@@ -1,4 +1,13 @@
 @media only screen and (max-width: 600px) {
+  .wrap-img {
+    z-index: 2;
+    position: relative;
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    top: 35%;
+    transform: translateY(-50%); 
+  }
   .container-presentation {
     display: flex;
     position: relative;
@@ -12,6 +21,7 @@
     justify-content: center;
     flex-direction: column;
     transform: translateY(-160%); 
+    padding-left: 25px;
   }
   
   .ola h1 {
@@ -42,11 +52,20 @@
 }
 
 @media only screen and (min-width: 600px) {
+  .wrap-img {
+    z-index: 2;
+    position: relative;
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    top: 35%;
+    transform: translateY(-50%); 
+  }
   .container-presentation {
     display: flex;
     justify-content: space-between;
     position: relative;
-    top: 40%;
+    top: 50%;
     transform: translateY(-50%); 
   }
   
@@ -84,11 +103,21 @@
 }
 
 @media only screen and (min-width: 768px) {
+  .wrap-img {
+    z-index: 2;
+    position: relative;
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    top: 30%;
+    transform: translateY(-50%); 
+  }
+
   .container-presentation {
     display: flex;
     justify-content: space-between;
     position: relative;
-    top: 40%;
+    top: 50%;
     transform: translateY(-50%); 
   }
   
@@ -126,12 +155,22 @@
 }
 
 @media only screen and (min-width: 992px) {
+  .wrap-img {
+    z-index: 2;
+    position: relative;
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    top: 30%;
+    transform: translateY(-50%); 
+  }
+
   .container-presentation {
     display: flex;
     width: 100%;
     justify-content: space-between;
     position: relative;
-    top: 40%;
+    top: 50%;
     transform: translateY(-50%); 
   }
   
@@ -168,13 +207,23 @@
   }
 }
 
-@media only screen and (min-width: 1200px) { 
+@media only screen and (min-width: 1200px) {
+  .wrap-img {
+    z-index: 2;
+    position: relative;
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    top: 30%;
+    transform: translateY(-50%); 
+  }
+
 .container-presentation {
   display: flex;
   width: 100%;
   justify-content: space-between;
   position: relative;
-  top: 40%;
+  top: 50%;
   transform: translateY(-50%); 
 }
 
@@ -209,4 +258,6 @@
   color: #2ccb69;
   font-size: 45px;
 }
+
+
 }
